--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,7 @@
-body {
-    margin: 0;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+html, body {
+  margin: 0;
+  padding: 0;
 }
-
-svg {
-    width: 100%;
-    height: 100%;
+canvas {
+  display: block;
 }
-
-.background {
-    fill: lightblue;
-}
-
-path {
-    stroke: black;
-    stroke-width: 0.5px;
-    fill:lightsalmon;
-}
-
